*                      count configuration.
* 6.1    vns  10/20/16 Added support for PUF registration, programming eFUSE
*                      with syndrome data, Auxilary value and CHash value.
*        vns  10/25/16 Removed ForcePowerCycle and JtagDisable, from BBRAM Zynq
*                      PL instance as they are not actually programming any
*                      control bit. These are already exists in Zynq eFUSE PL
*                      instance.
* 6.2    vns  02/28/17 Fixed compilation warnings.
*                      On ZynqMP:
*                      Added CRC check after programming whole AES key.
*                      Modified temperature and voltage checks at each eFUSE
*                      bit programming, only checking before eFUSE programming
*                      and after finishing programming of all the user requested
*                      bits.Verifying each eFUSE programmed bit with all 3
*                      margin reads
*        vns  03/10/17 CR #971154 - efuse PS of ZynqMP
*                      Modified PROG_GATE feature support, if user requests
*                      programming library programs all 3 bits of PROG_GATE.
*                      Modified secure control bits of efuse.
*                      Modified macros in header file for secure control bits
*                      Provided support for programming LBIST, LPD and FPD SC
*                      enable bits and some of the reserved bits.
* 6.3    vns  07/12/17 Added support for programming eFUSE and BBRAM of kintex
*                      Ultrascale plus.
* 6.4    vns  02/19/18 Added XilSKey_ZynqMp_EfusePs_CacheLoad() call in
*                      XilSKey_ZynqMp_EfusePs_Write(), on successul programming
*                      of all requested efuse bits updated efuse can directly
*                      read from eufse cache.
*
 ********************************************************************************/